--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,20 +10,20 @@
   },
 
   "icons": {
-    "16": "chrome-icons/icon-16.png",
-    "32": "chrome-icons/icon-32.png",
-    "48": "chrome-icons/icon-48.png",
-    "128": "chrome-icons/icon-128.png"
+    "16": "icons/icon-16.png",
+    "32": "icons/icon-32.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
   },
 
   "action": {
     "default_title": "PomoFlow - Pomodoro Timer, Tasks & Notes",
     "default_popup": "index.html",
     "default_icon": {
-      "16": "chrome-icons/icon-16.png",
-      "32": "chrome-icons/icon-32.png",
-      "48": "chrome-icons/icon-48.png",
-      "128": "chrome-icons/icon-128.png"
+      "16": "icons/icon-16.png",
+      "32": "icons/icon-32.png",
+      "48": "icons/icon-48.png",
+      "128": "icons/icon-128.png"
     }
   },
 
